# getmytix

./: .gitignore  README.md
backend/: .gitignore
backend/invoices/: Dockerfile  Makefile  pyproject.toml
backend/invoices/app/generator/: handler.py
backend/invoices/internal/aws/: sqs.py
backend/invoices/internal/config/: __init__.py
backend/invoices/internal/domain/: __init__.py  invoice.py  invoice_manager.py  invoice_request.py  webhooks.py
backend/invoices/services/generator/: handler.py
backend/tickets/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/tickets/app/generator/: handler.py
backend/tickets/internal/domain/: __init__.py  mailer.py  order.py  pdf_creator.py  qr_code.py  ticket_manager.py  webhooks.py
backend/tickets/services/generator/: handler.py
getmytix-web/: .env  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
getmytix-web/src/: middleware.ts
getmytix-web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
getmytix-web/src/app/[clientSlug]/scan/: page.tsx
getmytix-web/src/app/api/simplepay/: route.ts
getmytix-web/src/app/download/[orderUniqueId]/: page.tsx
getmytix-web/src/app/events/[:id]/: page.tsx
getmytix-web/src/app/events/[eventId]/: page.tsx
getmytix-web/src/app/events/[subdomain]/: page.tsx
getmytix-web/src/app/home/: page.tsx
getmytix-web/src/app/server-actions/: create-order.ts  session.ts  shopping-cart.ts
getmytix-web/src/components/molecules/: index.ts
getmytix-web/src/components/organisms/: index.ts
getmytix-web/src/components/ui/: toast.tsx
getmytix-web/src/lib/: domain.ts  mongodb.ts  types.ts
getmytix-web/src/lib/domain/: events.ts  index.ts  orders.ts  session.ts  shopping-carts.ts  tickets.ts  users.ts
terraform/: .gitignore  Makefile  backend.tf  dev.tfvars  invoices_queue.tf  lambda_generator.tf  lambda_invoices.tf  main.tf  outputs.tf  prod.tfvars  provider.tf  s3.tf  ticket_print_queue.tf  variables.tf
(+122 files in other folders)
