[tool.poetry]
name = "tickets"
version = "0.1.0"
description = ""
authors = ["Zoltan Arvai <zoltan.arvai@live.com>"]
readme = "README.md"
packages = [
    { include = "internal/**/*.py" },
    { include = "services/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.23"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
